crates/math-core/tests/snapshots/error_test__text_with_math_command.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\text{\\max}"
---
Error: Not valid in text mode.
   ╭─[ <input>:1:7 ]
   │
 1 │ \text{\max}
   │       ──┬─  
   │         ╰─── this is not valid in text mode
───╯
